Graph built, working on getting it to converge

--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -313,23 +313,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/awalchli/anaconda/lib/python3.6/site-packages/ipykernel/__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
+      "TensorFlow Version: 1.0.0\n",
+      "Default GPU Device: /gpu:0\n"
      ]
     }
    ],
@@ -354,7 +350,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Input\n",
     "Implement the `get_inputs()` function to create TF Placeholders for the Neural Network.  It should create the following placeholders:\n",
@@ -367,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -420,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -471,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -522,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -574,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -601,7 +600,13 @@
     "    \"\"\"\n",
     "    embedding = get_embed(input_data, vocab_size, rnn_size)\n",
     "    rnn_outputs, final_state = build_rnn(cell, embedding)\n",
-    "    logits = tf.contrib.layers.fully_connected(rnn_outputs, vocab_size, activation_fn=None)\n",
+    "    weights = tf.truncated_normal_initializer(stddev=0.5)\n",
+    "    biases = tf.zeros_initializer()\n",
+    "    logits = tf.contrib.layers.fully_connected(rnn_outputs, \n",
+    "                                               vocab_size, \n",
+    "                                               activation_fn=None, \n",
+    "                                               weights_initializer=weights, \n",
+    "                                               biases_initializer=biases)\n",
     "    \n",
     "    return logits, final_state\n",
     "\n",
@@ -650,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -709,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -718,13 +723,13 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 10\n",
+    "num_epochs = 20\n",
     "# Batch Size\n",
-    "batch_size = 500\n",
+    "batch_size = 256\n",
     "# RNN Size\n",
-    "rnn_size = 256\n",
+    "rnn_size = 512\n",
     "# Sequence Length\n",
-    "seq_length = 200\n",
+    "seq_length = 10\n",
     "# Learning Rate\n",
     "learning_rate = 0.01\n",
     "# Show stats for every n number of batches\n",
@@ -749,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -801,13 +806,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch   0 Batch    0/26   train_loss = 8.907\n",
+      "Epoch   0 Batch    5/26   train_loss = 8.898\n",
+      "Epoch   0 Batch   10/26   train_loss = 8.895\n",
+      "Epoch   0 Batch   15/26   train_loss = 8.894\n",
+      "Epoch   0 Batch   20/26   train_loss = 8.906\n",
+      "Epoch   0 Batch   25/26   train_loss = 8.901\n",
+      "Epoch   1 Batch    4/26   train_loss = 8.879\n",
+      "Epoch   1 Batch    9/26   train_loss = 8.899\n",
+      "Epoch   1 Batch   14/26   train_loss = 8.895\n",
+      "Epoch   1 Batch   19/26   train_loss = 8.906\n",
+      "Epoch   1 Batch   24/26   train_loss = 8.886\n",
+      "Epoch   2 Batch    3/26   train_loss = 8.895\n",
+      "Epoch   2 Batch    8/26   train_loss = 8.894\n",
+      "Epoch   2 Batch   13/26   train_loss = 8.906\n",
+      "Epoch   2 Batch   18/26   train_loss = 8.907\n",
+      "Epoch   2 Batch   23/26   train_loss = 8.896\n",
+      "Epoch   3 Batch    2/26   train_loss = 8.888\n",
+      "Epoch   3 Batch    7/26   train_loss = 8.896\n",
+      "Epoch   3 Batch   12/26   train_loss = 8.909\n",
+      "Epoch   3 Batch   17/26   train_loss = 8.902\n",
+      "Epoch   3 Batch   22/26   train_loss = 8.893\n",
+      "Epoch   4 Batch    1/26   train_loss = 8.889\n",
+      "Epoch   4 Batch    6/26   train_loss = 8.903\n",
+      "Epoch   4 Batch   11/26   train_loss = 8.889\n",
+      "Epoch   4 Batch   16/26   train_loss = 8.913\n",
+      "Epoch   4 Batch   21/26   train_loss = 8.892\n",
+      "Epoch   5 Batch    0/26   train_loss = 8.907\n",
+      "Epoch   5 Batch    5/26   train_loss = 8.898\n",
+      "Epoch   5 Batch   10/26   train_loss = 8.895\n",
+      "Epoch   5 Batch   15/26   train_loss = 8.894\n",
+      "Epoch   5 Batch   20/26   train_loss = 8.906\n",
+      "Epoch   5 Batch   25/26   train_loss = 8.901\n",
+      "Epoch   6 Batch    4/26   train_loss = 8.879\n",
+      "Epoch   6 Batch    9/26   train_loss = 8.899\n",
+      "Epoch   6 Batch   14/26   train_loss = 8.895\n",
+      "Epoch   6 Batch   19/26   train_loss = 8.906\n",
+      "Epoch   6 Batch   24/26   train_loss = 8.886\n",
+      "Epoch   7 Batch    3/26   train_loss = 8.895\n",
+      "Epoch   7 Batch    8/26   train_loss = 8.894\n",
+      "Epoch   7 Batch   13/26   train_loss = 8.906\n",
+      "Epoch   7 Batch   18/26   train_loss = 8.907\n",
+      "Epoch   7 Batch   23/26   train_loss = 8.896\n",
+      "Epoch   8 Batch    2/26   train_loss = 8.888\n",
+      "Epoch   8 Batch    7/26   train_loss = 8.896\n",
+      "Epoch   8 Batch   12/26   train_loss = 8.909\n",
+      "Epoch   8 Batch   17/26   train_loss = 8.902\n",
+      "Epoch   8 Batch   22/26   train_loss = 8.893\n",
+      "Epoch   9 Batch    1/26   train_loss = 8.889\n",
+      "Epoch   9 Batch    6/26   train_loss = 8.903\n",
+      "Epoch   9 Batch   11/26   train_loss = 8.889\n",
+      "Epoch   9 Batch   16/26   train_loss = 8.913\n",
+      "Epoch   9 Batch   21/26   train_loss = 8.892\n",
+      "Epoch  10 Batch    0/26   train_loss = 8.907\n",
+      "Epoch  10 Batch    5/26   train_loss = 8.898\n",
+      "Epoch  10 Batch   10/26   train_loss = 8.895\n",
+      "Epoch  10 Batch   15/26   train_loss = 8.894\n",
+      "Epoch  10 Batch   20/26   train_loss = 8.906\n",
+      "Epoch  10 Batch   25/26   train_loss = 8.901\n",
+      "Epoch  11 Batch    4/26   train_loss = 8.879\n",
+      "Epoch  11 Batch    9/26   train_loss = 8.899\n",
+      "Epoch  11 Batch   14/26   train_loss = 8.895\n",
+      "Epoch  11 Batch   19/26   train_loss = 8.906\n",
+      "Epoch  11 Batch   24/26   train_loss = 8.886\n",
+      "Epoch  12 Batch    3/26   train_loss = 8.895\n",
+      "Epoch  12 Batch    8/26   train_loss = 8.894\n",
+      "Epoch  12 Batch   13/26   train_loss = 8.906\n",
+      "Epoch  12 Batch   18/26   train_loss = 8.907\n",
+      "Epoch  12 Batch   23/26   train_loss = 8.896\n",
+      "Epoch  13 Batch    2/26   train_loss = 8.888\n",
+      "Epoch  13 Batch    7/26   train_loss = 8.896\n",
+      "Epoch  13 Batch   12/26   train_loss = 8.909\n",
+      "Epoch  13 Batch   17/26   train_loss = 8.902\n",
+      "Epoch  13 Batch   22/26   train_loss = 8.893\n",
+      "Epoch  14 Batch    1/26   train_loss = 8.889\n",
+      "Epoch  14 Batch    6/26   train_loss = 8.903\n",
+      "Epoch  14 Batch   11/26   train_loss = 8.889\n",
+      "Epoch  14 Batch   16/26   train_loss = 8.913\n",
+      "Epoch  14 Batch   21/26   train_loss = 8.892\n",
+      "Epoch  15 Batch    0/26   train_loss = 8.907\n",
+      "Epoch  15 Batch    5/26   train_loss = 8.898\n",
+      "Epoch  15 Batch   10/26   train_loss = 8.895\n",
+      "Epoch  15 Batch   15/26   train_loss = 8.894\n",
+      "Epoch  15 Batch   20/26   train_loss = 8.906\n",
+      "Epoch  15 Batch   25/26   train_loss = 8.901\n",
+      "Epoch  16 Batch    4/26   train_loss = 8.879\n",
+      "Epoch  16 Batch    9/26   train_loss = 8.899\n",
+      "Epoch  16 Batch   14/26   train_loss = 8.895\n",
+      "Epoch  16 Batch   19/26   train_loss = 8.906\n",
+      "Epoch  16 Batch   24/26   train_loss = 8.886\n",
+      "Epoch  17 Batch    3/26   train_loss = 8.895\n",
+      "Epoch  17 Batch    8/26   train_loss = 8.894\n",
+      "Epoch  17 Batch   13/26   train_loss = 8.906\n",
+      "Epoch  17 Batch   18/26   train_loss = 8.907\n",
+      "Epoch  17 Batch   23/26   train_loss = 8.896\n",
+      "Epoch  18 Batch    2/26   train_loss = 8.888\n",
+      "Epoch  18 Batch    7/26   train_loss = 8.896\n",
+      "Epoch  18 Batch   12/26   train_loss = 8.909\n",
+      "Epoch  18 Batch   17/26   train_loss = 8.902\n",
+      "Epoch  18 Batch   22/26   train_loss = 8.893\n",
+      "Epoch  19 Batch    1/26   train_loss = 8.889\n",
+      "Epoch  19 Batch    6/26   train_loss = 8.903\n",
+      "Epoch  19 Batch   11/26   train_loss = 8.889\n",
+      "Epoch  19 Batch   16/26   train_loss = 8.913\n",
+      "Epoch  19 Batch   21/26   train_loss = 8.892\n",
+      "Model Trained and Saved\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -1081,7 +1198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
